demo-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo
  annotations:
    fluentbit.io/tag: application.demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
  template:
    metadata:
      labels:
        app: demo
    spec:
      volumes:
        - name: ebs-volume
          persistentVolumeClaim:
            claimName: ebs-pvc
      containers:
        - name: demo
          image: <your-ecr-repo>/demo:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: ebs-volume
              mountPath: /mnt/data
---
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-public
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: <your-certificate-arn>
    alb.ingress.kubernetes.io/subnets: <your-subnets>
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-protocol: HTTP
spec:
  rules:
    - host: <your-host>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo
                port:
                  number: 80
  tls:
    - hosts:
        - demo.lokatech.net
